--- a/index.html
+++ b/index.html
@@ -18,36 +18,39 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td>Lab1</td>
+                <td>LAB-1</td>
                 <td>HTML Tags Information</td>
                 <td><a href="./WEB-LAB/LAB-1/LAB_1.html">Resume</a></td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Lab2</td>
-                <td><a href="./WT_LAB/LAB-2/resume.html">Resume</a></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Lab3</td>
-                <td><span><a href="./WT_LAB/LAB-3/REGISTER/20IT026_TIME_TABLE.html">Timetable</a></span>
-                    <br><span><a href="./WT_LAB/LAB-3/REGISTER/rigister.html">Form</a></span>
+                <td>LAB-2</td>
+                <td><span><a href="./WEB-LAB/Lab-2/TIME_TABLE.html">TimeTable</a></span>
+                    <br><span><a href="./WEB-LAB/Lab-2/Registration.html">Form</a></span>
                 </td>
             </tr>
             <tr>
+                <td>3</td>
+                <td>LAB-3</td>
+                <td><span><a href="./WEB-LAB/LAB-3/project.html">HTML-CSS-PROJECT</a></span></td>
+            </tr>
+            <tr>
                 <td>4</td>
-                <td>Lab4</td>
-                <td><span><a href="./WT_LAB/LAB-4/Quiz.html">Webpage</a></span></td>
+                <td>LAB-4</td>
+                <td><span><a href="./WEB-LAB/LAB%204/index.html">LAYOUT-USING-CSS</a></span></td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Lab5</td>
-                <td><span><a href="./WT_LAB/LAB-5/layout.html">Create Layouts - without flex/grid</a></span></td>
+                <td>LAB-5</td>
+                <td><span><a href="./WEB-LAB/LAB%205/index.html">LAYOUT-USING-FLEXBOX</a></span></td>
             </tr>
             <tr>
                 <td>6</td>
-                <td>Lab6</td>
-                <td><span><a href="./WT_LAB/LAB-6/flex.html">Flexbox</a></span></td>
+                <td>LAB-6</td>
+                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout1.html">LAYOUT1</a></span></td>
+                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout2.html">LAYOUT2</a></span></td>
+                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout3.html">LAYOUT3</a></span></td>
+                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout4.html">LAYOUT4</a></span></td>
             </tr>
             <tr>
                 <td>7</td>
