--- a/index.html
+++ b/index.html
@@ -54,15 +54,38 @@
             </tr>
             <tr>
                 <td>7</td>
-                <td>Lab7</td>
-                <td><span><a href="./WT_LAB/LAB-7/transition.html">Transition,Transform</a></span></td>
+                <td>LAB-7</td>
+                <td><span><a href="./WEB-LAB/LAB%207/CHARUSAT%20CLONE/charusat.html">CHARUSAT-WEBSITE-HOME-PAGE</a></span></td>
             </tr>
             <tr>
                 <td>8</td>
-                <td>Lab8</td>
-                <td><span><a href="./WT_LAB/LAB-8/CHARUSAT CLONE/charusat.html">CHARUSAT CLONE</a></span>
-                <span><a href="./WT_LAB/LAB-8/keyframes/boat.html">Animation</a></span>
+                <td>LAB-8</td>
+                <td><span><a href="./WEB-LAB/LAB-8/Boat-on-Sea-Animation-main/index.html">BOAT-ANIMATION</a></span>
                 </td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>LAB-9</td>
+                <td><span><a href="./WEB-LAB/LAB%209/CHARUSAT%20CLONE/charusat.html">SIDE-SOCIALBAR-IN-CHARUSAT-CLONE</a></span>
+                </td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>LAB-10</td>
+                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task1.html.html">JS-TASK1</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task2.html.html">JS-TASK1</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task3.html.html">JS-TASK1</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task4.html">JS-TASK1</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task5.html.html">JS-TASK1</a></span>
+                </td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>LAB-11</td>
+                <td><span><a href="./WEB-LAB/Lab-11/HTML/date.html">DATE</a></span></td>
+                <td><span><a href="./WEB-LAB/Lab-11/HTML/math.html">MATH</a></span></td>
+                <td><span><a href="./WEB-LAB/Lab-11/HTML/number.html">NUMBER</a></span></td>
+                <td><span><a href="./WEB-LAB/Lab-11/HTML/string.html">STRING</a></span></td>
             </tr>
         </table>
     </div>
