--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
                 <td><span><a href="./WEB-LAB/Lab-11/HTML/number.html">NUMBER</a></span></td>
                 <td><span><a href="./WEB-LAB/Lab-11/HTML/string.html">STRING</a></span></td>
             </tr>
+            <tr>
+                <td>12</td>
+                <td>LAB-12</td>
+                <td><span><a href="./WEB-LAB/LAB%2012/BASIC_FORM_VALIDATION/BasicFormValidation.html">BASIC-FORM-VALIDATION</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2012/Student_Form_Validation">STUDENT-FORM-VALIDATION</a></span>
+                </td>
+            </tr>
         </table>
     </div>
 </body>
