--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <td>12</td>
                 <td>LAB-12</td>
                 <td><span><a href="./WEB-LAB/LAB%2012/BASIC_FORM_VALIDATION/BasicFormValidation.html">BASIC-FORM-VALIDATION</a></span>
-                <td><span><a href="./WEB-LAB/LAB%2012/Student_Form_Validation">STUDENT-FORM-VALIDATION</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2012/Student_Form_Validation/registrationform.html">STUDENT-FORM-VALIDATION</a></span>
                 </td>
             </tr>
         </table>
