--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <td>2</td>
                 <td>LAB-2</td>
                 <td><span><a href="./WEB-LAB/Lab-2/TIME_TABLE.html">TimeTable</a></span>
-                    <br><span><a href="./WEB-LAB/Lab-2/Registration.html">Form</a></span>
+                    <br><span><a href="./WEB-LAB/Lab-2/Registration.html">Registration-Form</a></span>
                 </td>
             </tr>
             <tr>
@@ -46,10 +46,10 @@
             <tr>
                 <td>6</td>
                 <td>LAB-6</td>
-                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout1.html">LAYOUT1</a></span></td>
-                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout2.html">LAYOUT2</a></span></td>
-                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout3.html">LAYOUT3</a></span></td>
-                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout4.html">LAYOUT4</a></span></td>
+                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout1.html">LAYOUT1</a></span><br>
+                <span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout2.html">LAYOUT2</a></span><br>
+                <span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout3.html">LAYOUT3</a></span><br>
+                <span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout4.html">LAYOUT4</a></span>
             </tr>
             <tr>
                 <td>7</td>
@@ -71,26 +71,26 @@
             <tr>
                 <td>10</td>
                 <td>LAB-10</td>
-                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task1.html.html">JS-TASK1</a></span>
-                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task2.html.html">JS-TASK1</a></span>
-                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task3.html.html">JS-TASK1</a></span>
-                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task4.html">JS-TASK1</a></span>
-                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task5.html.html">JS-TASK1</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task1.html.html">JS-TASK1</a></span><br>
+                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task2.html.html">JS-TASK1</a></span><br>
+                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task3.html.html">JS-TASK1</a></span><br>
+                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task4.html">JS-TASK1</a></span><br>
+                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task5.html.html">JS-TASK1</a></span>
                 </td>
             </tr>
             <tr>
                 <td>11</td>
                 <td>LAB-11</td>
-                <td><span><a href="./WEB-LAB/Lab-11/HTML/date.html">DATE</a></span></td>
-                <td><span><a href="./WEB-LAB/Lab-11/HTML/math.html">MATH</a></span></td>
-                <td><span><a href="./WEB-LAB/Lab-11/HTML/number.html">NUMBER</a></span></td>
-                <td><span><a href="./WEB-LAB/Lab-11/HTML/string.html">STRING</a></span></td>
+                <td><span><a href="./WEB-LAB/Lab-11/HTML/date.html">DATE</a></span><br>
+                <span><a href="./WEB-LAB/Lab-11/HTML/math.html">MATH</a></span><br>
+                <span><a href="./WEB-LAB/Lab-11/HTML/number.html">NUMBER</a></span><br>
+                <span><a href="./WEB-LAB/Lab-11/HTML/string.html">STRING</a></span></td>
             </tr>
             <tr>
                 <td>12</td>
                 <td>LAB-12</td>
-                <td><span><a href="./WEB-LAB/LAB%2012/BASIC_FORM_VALIDATION/BasicFormValidation.html">BASIC-FORM-VALIDATION</a></span>
-                <td><span><a href="./WEB-LAB/LAB%2012/Student_Form_Validation/registrationform.html">STUDENT-FORM-VALIDATION</a></span>
+                <td><span><a href="./WEB-LAB/LAB%2012/BASIC_FORM_VALIDATION/BasicFormValidation.html">BASIC-FORM-VALIDATION</a></span><br>
+                <span><a href="./WEB-LAB/LAB%2012/Student_Form_Validation/registrationform.html">STUDENT-FORM-VALIDATION</a></span>
                 </td>
             </tr>
         </table>
