--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <tr>
                 <td>1</td>
                 <td>LAB-1</td>
-                <td><a href="./WEB-LAB/LAB-1/LAB_1.html">Resume</a></td>
+                <td><a href="./LAB-1/LAB_1.html">Resume</a></td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>LAB-2</td>
-                <td><span><a href="./WEB-LAB/Lab-2/TIME_TABLE.html">TimeTable</a></span>
-                    <br><span><a href="./WEB-LAB/Lab-2/Registration.html">Registration-Form</a></span>
+                <td><span><a href="./Lab-2/TIME_TABLE.html">TimeTable</a></span>
+                    <br><span><a href="./Lab-2/Registration.html">Registration-Form</a></span>
                 </td>
             </tr>
             <tr>
