--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Work</title>
+    <title>WEB LAB WORK</title>
 </head>
 
 <body>
@@ -13,8 +13,8 @@
         <table border="1" cellspacing="5" cellpadding="10">
             <tr>
                 <td>No.</td>
-                <td>Lab.</td>
-                <td>Description.</td>
+                <td>LAB.</td>
+                <td>DESCRIPTION.</td>
             </tr>
             <tr>
                 <td>1</td>
@@ -31,12 +31,12 @@
             <tr>
                 <td>3</td>
                 <td>LAB-3</td>
-                <td><span><a href="./WEB-LAB/LAB-3/project.html">HTML-CSS-PROJECT</a></span></td>
+                <td><span><a href="./LAB-3/project.html">HTML-CSS-PROJECT</a></span></td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>LAB-4</td>
-                <td><span><a href="./WEB-LAB/LAB%204/index.html">LAYOUT-USING-CSS</a></span></td>
+                <td><span><a href="./LAB%204/index.html">LAYOUT-USING-CSS</a></span></td>
             </tr>
             <tr>
                 <td>5</td>
