--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="mIN" style="display:flex;justify-content:center;align-item:center;">
-        <table border="1" cellspacing="5" cellpadding="10">
+        <table border="1" cellspacing="10" cellpadding="15">
             <tr>
                 <td>No.</td>
                 <td>LAB.</td>
@@ -36,61 +36,61 @@
             <tr>
                 <td>4</td>
                 <td>LAB-4</td>
-                <td><span><a href="./LAB%204/index.html">LAYOUT-USING-CSS</a></span></td>
+                <td><span><a href="./LAB 4/index.html">LAYOUT-USING-CSS</a></span></td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>LAB-5</td>
-                <td><span><a href="./WEB-LAB/LAB%205/index.html">LAYOUT-USING-FLEXBOX</a></span></td>
+                <td><span><a href="./WEB-LAB/LAB 5/index.html">LAYOUT-USING-FLEXBOX</a></span></td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>LAB-6</td>
-                <td><span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout1.html">LAYOUT1</a></span><br>
-                <span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout2.html">LAYOUT2</a></span><br>
-                <span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout3.html">LAYOUT3</a></span><br>
-                <span><a href="./WEB-LAB/LAB%206/20IT120_FlexBox/layout4.html">LAYOUT4</a></span>
+                <td><span><a href="./LAB 6/20IT120_FlexBox/layout1.html">LAYOUT1</a></span><br>
+                <span><a href="./LAB 6/20IT120_FlexBox/layout2.html">LAYOUT2</a></span><br>
+                <span><a href="./LAB 6/20IT120_FlexBox/layout3.html">LAYOUT3</a></span><br>
+                <span><a href="./LAB 6/20IT120_FlexBox/layout4.html">LAYOUT4</a></span>
             </tr>
             <tr>
                 <td>7</td>
                 <td>LAB-7</td>
-                <td><span><a href="./WEB-LAB/LAB%207/CHARUSAT%20CLONE/charusat.html">CHARUSAT-WEBSITE-HOME-PAGE</a></span></td>
+                <td><span><a href="./LAB 7/CHARUSAT%20CLONE/charusat.html">CHARUSAT-WEBSITE-HOME-PAGE</a></span></td>
             </tr>
             <tr>
                 <td>8</td>
                 <td>LAB-8</td>
-                <td><span><a href="./WEB-LAB/LAB-8/Boat-on-Sea-Animation-main/index.html">BOAT-ANIMATION</a></span>
+                <td><span><a href="./LAB-8/Boat-on-Sea-Animation-main/index.html">BOAT-ANIMATION</a></span>
                 </td>
             </tr>
             <tr>
                 <td>9</td>
                 <td>LAB-9</td>
-                <td><span><a href="./WEB-LAB/LAB%209/CHARUSAT%20CLONE/charusat.html">SIDE-SOCIALBAR-IN-CHARUSAT-CLONE</a></span>
+                <td><span><a href="./LAB 9/CHARUSAT%20CLONE/charusat.html">SIDE-SOCIALBAR-IN-CHARUSAT-CLONE</a></span>
                 </td>
             </tr>
             <tr>
                 <td>10</td>
                 <td>LAB-10</td>
-                <td><span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task1.html.html">JS-TASK1</a></span><br>
-                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task2.html.html">JS-TASK1</a></span><br>
-                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task3.html.html">JS-TASK1</a></span><br>
-                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task4.html">JS-TASK1</a></span><br>
-                <span><a href="./WEB-LAB/LAB%2010/20IT120_JS/Task5.html.html">JS-TASK1</a></span>
+                <td><span><a href="./LAB 10/20IT120_JS/Task1.html.html">JS-TASK1</a></span><br>
+                <span><a href="./LAB 10/20IT120_JS/Task2.html.html">JS-TASK1</a></span><br>
+                <span><a href="./LAB 10/20IT120_JS/Task3.html.html">JS-TASK1</a></span><br>
+                <span><a href="./LAB 10/20IT120_JS/Task4.html">JS-TASK1</a></span><br>
+                <span><a href="./LAB 10/20IT120_JS/Task5.html.html">JS-TASK1</a></span>
                 </td>
             </tr>
             <tr>
                 <td>11</td>
                 <td>LAB-11</td>
-                <td><span><a href="./WEB-LAB/Lab-11/HTML/date.html">DATE</a></span><br>
-                <span><a href="./WEB-LAB/Lab-11/HTML/math.html">MATH</a></span><br>
-                <span><a href="./WEB-LAB/Lab-11/HTML/number.html">NUMBER</a></span><br>
-                <span><a href="./WEB-LAB/Lab-11/HTML/string.html">STRING</a></span></td>
+                <td><span><a href="./Lab-11/HTML/date.html">DATE</a></span><br>
+                <span><a href="./Lab-11/HTML/math.html">MATH</a></span><br>
+                <span><a href="./Lab-11/HTML/number.html">NUMBER</a></span><br>
+                <span><a href="./Lab-11/HTML/string.html">STRING</a></span></td>
             </tr>
             <tr>
                 <td>12</td>
                 <td>LAB-12</td>
-                <td><span><a href="./WEB-LAB/LAB%2012/BASIC_FORM_VALIDATION/BasicFormValidation.html">BASIC-FORM-VALIDATION</a></span><br>
-                <span><a href="./WEB-LAB/LAB%2012/Student_Form_Validation/registrationform.html">STUDENT-FORM-VALIDATION</a></span>
+                <td><span><a href="./LAB 12/BASIC_FORM_VALIDATION/BasicFormValidation.html">BASIC-FORM-VALIDATION</a></span><br>
+                <span><a href="./LAB 12/Student_Form_Validation/registrationform.html">STUDENT-FORM-VALIDATION</a></span>
                 </td>
             </tr>
         </table>
