--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
                 <span><a href="./LAB 12/Student_Form_Validation/registrationform.html">STUDENT-FORM-VALIDATION</a></span>
                 </td>
             </tr>
+            <tr>
+                <td>13</td>
+                <td>LAB-13</td>
+                <td><span><a href="./LAB 13/email validation.html">EMAIL VALIDATION</a></span><br>
+                <span><a href="./LAB 13/mobile no.html">MOBILE NO.</a></span><br>
+                <span><a href="./LAB 13/password.html">PASSWORD</a></span><br>
+                <span><a href="./LAB 13/pattern.html">PATTERN</a></span></td>
+            </tr>
+            <tr>
+                <td>14</td>
+                <td>LAB-14</td>
+                <td><span><a href="./LAB 14/CHECK BOX TASK/index.html">CHECK BOX TASK</a></span><br>
+                <span><a href="./LAB 14/SELECT CITY AND DISPLAY PHOTO OF SELECTED CITY/index.html">SELECT CITY & IT GIVE CITY'S PHOTO</a></span>
+                </td>
+            </tr>
         </table>
     </div>
 </body>
