--- a/LAB 10/20IT120_JS/Task3.html.html
+++ b/LAB 10/20IT120_JS/Task3.html.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="changeColor()">
     
-    <div id="div1" name="div1"><center>Changing Color of div</center></div>
+    <div id="div1" name="div1"><center>Changing Color on referinshig the page</center></div>
     <script src="./Task3.js"></script>
 </body>
 </html>
