--- a/Lab-11/HTML/date.html
+++ b/Lab-11/HTML/date.html
@@ -11,6 +11,6 @@
     <div id="date2"></div>
 
 
-    <script src="/JS/date.js"></script>
+    <script src="./JS/date.js"></script>
 </body>
 </html>
