--- a/Lab-11/HTML/string.html
+++ b/Lab-11/HTML/string.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div id="string"></div>
     <div id="string1"></div>
@@ -14,6 +16,23 @@
     <div id="string4"></div>
     <div id="string5"></div>
 
-    <script src="/JS/string.js"></script>
+    <script>
+        let str1 = "Hello";
+        let str2 = "How are you";
+        let str3 = "My name is JIMMY";
+
+
+        document.getElementById('string').innerHTML = str1 + "<br>" + str2 + "<br>" + str3;
+
+        document.getElementById('string1').innerHTML = str1.length;
+
+
+        // JS string as a object 
+        let x = "JIMMY";
+        let y = new String("JIMMY");
+
+        document.getElementById('string2').innerHTML = typeof x + "  " + typeof y + "<br>" + (x == y) + "<br>" + (x === y);
+    </script>
 </body>
+
 </html>
