--- a/Lab-2/Registration.html
+++ b/Lab-2/Registration.html
@@ -12,7 +12,7 @@
 
     <form>
         <div class="details">
-            <h1>Register Here</h1>
+            <h1>FILL THE DETAILS</h1>
             <p> create an account with us.</p>
             <hr>
             <label for="email"><b>Enter Email</b></label>
