--- a/LAB 5/index.html
+++ b/LAB 5/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
-    <title>LayOut Using FlexBox</title>
+    <title>LayOut With Meadia-Query</title>
 </head>
 
 <body>
@@ -22,12 +22,12 @@
         </article>
         <aside class="aside aside1">
             <h1>
-                Aside 1
+                side 1
             </h1>
         </aside>
         <aside class="aside aside2">
             <h1>
-                Aside 2
+                side 2
             </h1>
         </aside>
         <footer class="footer">
