--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <tr>
                 <td>5</td>
                 <td>LAB-5</td>
-                <td><span><a href="./LAB 5/index.html">LAYOUT-USING-FLEXBOX</a></span></td>
+                <td><span><a href="./LAB 5/index.html">LayOut With Meadia-Query</a></span></td>
             </tr>
             <tr>
                 <td>6</td>
