--- a/LAB 10/20IT120_JS/Task4.html
+++ b/LAB 10/20IT120_JS/Task4.html
@@ -9,7 +9,9 @@
     <style>
         span{
             border-radius: 50%;
-            border:2px solid black;
+            border:3px solid black;
+            background-color: brown;
+            margin: 3px;
         }
     </style>
 
