--- a/LAB 13/pattern.html
+++ b/LAB 13/pattern.html
@@ -7,7 +7,7 @@
     <title>Find words with given pattern</title>
     <link rel="stylesheet" href="pattern.css">
   </head>
-  <body>
+  <body style="background: rgb(23, 10, 63);">
     <div>
       <script defer src="pattern.js"></script>
       <button id="button4" onclick="WithPattern()">Enter pattern</button>
