--- a/LAB 14/CHECK BOX TASK/index.html
+++ b/LAB 14/CHECK BOX TASK/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <script src="lab12.js"></script>
-    <form name="forms" action="action.php" method="post" onsubmit="return validate(this)">
-        <input type="checkbox" name="hobbies" value="singing">Singing<br>
-        <input type="checkbox" name="hobbies" value="dancing">Dancing<br>
-        <input type="checkbox" name="hobbies" value="cooking">Cooking<br>
-        <input type="checkbox" name="hobbies" value="programming">Programming<br>
+    <form name="forms" action="action.php" method="post" onsubmit="return validate(this)" class="form">
+        <input type="checkbox" name="hobbies" value="singing">CRICKETING<br>
+        <input type="checkbox" name="hobbies" value="dancing">DANCING<br>
+        <input type="checkbox" name="hobbies" value="cooking">COMEDY<br>
+        <input type="checkbox" name="hobbies" value="programming">LEARNING<br>
         <button>Submit</button>
     </form>
 </body>
