--- a/LAB 14/SELECT CITY AND DISPLAY PHOTO OF SELECTED CITY/index.html
+++ b/LAB 14/SELECT CITY AND DISPLAY PHOTO OF SELECTED CITY/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/lab12.css">
 </head>
-<body>
-    <h1>Select city from the list</h1>
+<body class="body">
+    <h1>SELECT THE CITIES</h1>
     <div class="container" id="container">
-        <label for="cities">Choose a city</label>
+        <label for="cities">CHOOSE A CITY</label>
         <select id="cities">
-            <option disabled hidden selected>Select</option>
+            <option disabled hidden selected>CLICK</option>
             <option value="surat">BHAVNAGAR</option>
             <option value="ahmedabad">AHMDABAD</option>
             <option value="rajkot">NADIAD</option>
