--- a/LAB 13/email validation.html
+++ b/LAB 13/email validation.html
@@ -5,7 +5,7 @@
     <title>Email validation</title>
     <link rel="stylesheet" href="email validation.css" type="text/css" />
   </head>
-  <body onload="document.form1.text1.focus()">
+  <body onload="document.form1.text1.focus()" class="body">
     <div class="mail">
       <h2>Enter an email address</h2>
       <form name="form1" action="#">
