--- a/LAB 13/mobile no.html
+++ b/LAB 13/mobile no.html
@@ -5,7 +5,7 @@
     <title>Mobile number validation</title>
     <link rel="stylesheet" href="mobile no.css" type="text/css" />
   </head>
-  <body onload="document.form1.text1.focus()">
+  <body onload="document.form1.text1.focus()" class="body">
     <div class="mail">
       <h2>Enter mobile number</h2>
       <form name="form1" action="#">
