--- a/LAB 13/password.html
+++ b/LAB 13/password.html
@@ -5,7 +5,7 @@
     <title>Password validation</title>
     <link rel="stylesheet" href="password.css" type="text/css" />
   </head>
-  <body onload="document.form1.text1.focus()">
+  <body onload="document.form1.text1.focus()" class="body">
     <div class="mail">
       <h2>
         Enter your password (required 7 to 15 characters)
