--- a/LAB 14/CHECK BOX TASK/index.html
+++ b/LAB 14/CHECK BOX TASK/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <script src="lab12.js"></script>
+   
     <form name="forms" action="action.php" method="post" onsubmit="return validate(this)" class="form">
+        <!-- <img src="./175484.jpg" alt="" srcset=""> -->
         <input type="checkbox" name="hobbies" value="singing">CRICKETING<br>
         <input type="checkbox" name="hobbies" value="dancing">DANCING<br>
         <input type="checkbox" name="hobbies" value="cooking">COMEDY<br>
