--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <tr>
                 <td>9</td>
                 <td>LAB-9</td>
-                <td><span><a href="./LAB 9/CHARUSAT%20CLONE/charusat.html">SIDE-SOCIALBAR-IN-CHARUSAT-CLONE</a></span>
+                <td><span><a href="./LAB 9/CHARUSAT CLONE/charusat.html">SIDE-SOCIALBAR-IN-CHARUSAT-CLONE</a></span>
                 </td>
             </tr>
             <tr>
