--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <tr>
                 <td>7</td>
                 <td>LAB-7</td>
-                <td><span><a href="./LAB 7/CHARUSAT%20CLONE/charusat.html">CHARUSAT-WEBSITE-HOME-PAGE</a></span></td>
+                <td><span><a href="./LAB 7/CHARUSAT CLONE/charusat.html">CHARUSAT-WEBSITE-HOME-PAGE</a></span></td>
             </tr>
             <tr>
                 <td>8</td>
@@ -65,7 +65,7 @@
             <tr>
                 <td>9</td>
                 <td>LAB-9</td>
-                <td><span><a href="./LAB 9/CHARUSAT CLONE/charusat.html">SIDE-SOCIALBAR-IN-CHARUSAT-CLONE</a></span>
+                <td><span><a href="./LAB 9/CHARUSAT CLONE WITH SOCIAL BAR/charusat.html">SIDE-SOCIALBAR-IN-CHARUSAT-CLONE</a></span>
                 </td>
             </tr>
             <tr>
